--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Renato Oliveira",
+  "author": "Murilo de Souza Soares Lima",
   "license": "ISC",
   "description": "",
   "devDependencies": {
